--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/DefaultModelCompare.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/DefaultModelCompare.vm
@@ -49,7 +49,7 @@ override public fun inter(origin: KMFContainer, target: KMFContainer): TraceSequ
                 }
             }
         }
-        origin.visit(visitor,true,true)
+        origin.visit(visitor,true,true,false)
 
         val visitor2 = object : org.kevoree.modeling.api.util.ModelVisitor(){
             override public fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
@@ -74,7 +74,7 @@ override public fun inter(origin: KMFContainer, target: KMFContainer): TraceSequ
                 }
             }
         }
-        target.visit(visitor2,true,true)
+        target.visit(visitor2,true,true,false)
         if(!inter){
             //if diff
             if(!merge){
