--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ModelCloner.vm
@@ -38,7 +38,7 @@ override fun cloneMutableOnly<A : org.kevoree.modeling.api.KMFContainer>(o : A,r
                 }
             }
         }
-        o.visit(cloneGraphVisitor,true,true)
+        o.visit(cloneGraphVisitor,true,true,false)
 
         val resolveGraphVisitor = object : org.kevoree.modeling.api.util.ModelVisitor(){
             override public fun visit(elem : org.kevoree.modeling.api.KMFContainer, refNameInParent : String, parent : org.kevoree.modeling.api.KMFContainer){
@@ -46,7 +46,7 @@ override fun cloneMutableOnly<A : org.kevoree.modeling.api.KMFContainer>(o : A,r
                 if(readOnly){(elem as ${ctx.getKevoreeContainerImplFQN()}).setInternalReadOnly()}
             }
         }
-        o.visit(resolveGraphVisitor,true,true)
+        o.visit(resolveGraphVisitor,true,true,false)
         (o as ${ctx.getKevoreeContainerImplFQN()}).resolve(context,readOnly,mutableOnly)
         if(readOnly){(clonedObject as ${ctx.getKevoreeContainerImplFQN()}).setInternalReadOnly()}
         return clonedObject as A
