--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
@@ -3,8 +3,9 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 #* @vtlvariable name="packElem" type="java.lang.String" *#
 
-#if(!$currentClass.getEAllReferences().isEmpty())
+##if(!$currentClass.getEAllReferences().isEmpty())
 override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursive : Boolean, containedReference : Boolean,nonContainedReference : Boolean){
+            visitor.beginVisitElem(this)
             #set($firstGeneratedCont = true)
             #foreach( $ref in $currentClass.getEAllContainments())
                 #if($firstGeneratedCont)
@@ -41,8 +42,9 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
            #if(!$firstGeneratedRef)
            }
            #end
+           visitor.endVisitElem(this)
 }
-#end
+##end
 
 #if(!$currentClass.getEAllAttributes().isEmpty())
 override fun visit(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){
