--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
@@ -51,7 +51,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
 ##end
 
 #if(!$currentClass.getEAllAttributes().isEmpty())
-override fun visit(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){
+override fun visitAttributes(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){
     #foreach( $att in $currentClass.getEAllAttributes())
         visitor.visit(${FQNHelper.protectReservedWords($att.getName())},${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Att_${att.getName()},this)
     #end
