--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -185,7 +185,7 @@ fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutable
 #end
 
     override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursive : Boolean, containedReference : Boolean,nonContainedReference : Boolean){}
-    override fun visit(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){}
+    override fun visitAttributes(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){}
 
     fun internal_visit(visitor : org.kevoree.modeling.api.util.ModelVisitor,internalElem : org.kevoree.modeling.api.KMFContainer?,recursive:Boolean,containedReference : Boolean,nonContainedReference : Boolean, refName : String){
         if(internalElem != null){
@@ -220,6 +220,63 @@ fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutable
         } else {
             return ""
         }
+    }
+
+    override fun modelEquals(similarObj: org.kevoree.modeling.api.KMFContainer?): Boolean {
+        if(similarObj == null){return false}
+        if(this == similarObj){return true}//same Object
+        if(similarObj.metaClassName()!=metaClassName()){return false}
+        val values = java.util.HashMap<String,String?>()
+        val attVisitor = object : org.kevoree.modeling.api.util.ModelAttributeVisitor {
+            public override fun visit(value: Any?, name: String, parent: org.kevoree.modeling.api.KMFContainer){
+                if(values.containsKey(name)){
+                    if(values.get(name) == value?.toString()){
+                        values.remove(name)
+                    }
+                } else {
+                    values.put(name,value?.toString())
+                }
+            }
+        }
+        this.visitAttributes(attVisitor)
+        similarObj.visitAttributes(attVisitor)
+        if(!values.isEmpty()){return false}
+        val payload = "";
+        val refVisitor = object : org.kevoree.modeling.api.util.ModelVisitor() {
+            public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
+                val concatedKey = refNameInParent+"_"+elem.path()
+                if(values.containsKey(concatedKey)){
+                    values.remove(concatedKey)
+                } else {
+                    values.put(concatedKey,payload)
+                }
+            }
+        }
+        this.visit(refVisitor,false,false,true)
+        similarObj.visit(refVisitor,false,false,true)
+        if(!values.isEmpty()){return false}
+        return true
+    }
+
+    override fun deepModelEquals(similarObj: org.kevoree.modeling.api.KMFContainer?): Boolean {
+        if(!modelEquals(similarObj)){return false}
+        var similarRoot : org.kevoree.modeling.api.KMFContainer = similarObj!!
+        while(similarRoot.eContainer() != null){
+            similarRoot = similarRoot.eContainer()!!;
+        }
+        var resultTest = true
+        val finalRoot = similarRoot
+        val objVisitor = object : org.kevoree.modeling.api.util.ModelVisitor() {
+            public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
+                  var similarSubObj = finalRoot.findByPath(elem.path()!!)
+                  if(!elem.modelEquals(similarSubObj)){
+                      resultTest = false
+                      stopVisit()
+                  }
+            }
+        }
+        visit(objVisitor,true,true,false)
+        return resultTest
     }
 
 
