--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
@@ -12,7 +12,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
             if(containedReference){
                     #set($firstGeneratedCont = false)
                 #end
-                visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
                 #if($ref.isMany())
                     for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
                         internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
@@ -32,7 +32,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
            if(nonContainedReference){
                             #set($firstGeneratedRef = false)
                         #end
-                        visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
+                        visitor.beginVisitRef(${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()}, ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.${FQNHelper.fqn($ctx, $ref.getEReferenceType()).replace(".", "_")})
                         #if($ref.isMany())
                             for(KMFLoopEntryKey in _${ref.getName()}.keySet()){
                                 internal_visit(visitor,_${ref.getName()}.get(KMFLoopEntryKey),recursive,containedReference,nonContainedReference,${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Ref_${ref.getName()})
