--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
@@ -52,7 +52,7 @@ override fun visit(visitor : org.kevoree.modeling.api.util.ModelVisitor, recursi
 
 #if(!$currentClass.getEAllAttributes().isEmpty())
 override fun visitAttributes(visitor : org.kevoree.modeling.api.util.ModelAttributeVisitor){
-    #foreach( $att in $currentClass.getEAllAttributes())
+    #foreach( $att in ${FQNHelper.noduplicate($currentClass.getEAllAttributes())})
         visitor.visit(${FQNHelper.protectReservedWords($att.getName())},${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.util.Constants.Att_${att.getName()},this)
     #end
 }
