--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -176,7 +176,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 
     fun internal_visit(visitor : org.kevoree.modeling.api.util.ModelVisitor,internalElem : org.kevoree.modeling.api.KMFContainer?,recursive:Boolean,containedReference : Boolean,nonContainedReference : Boolean, refName : String){
         if(internalElem != null){
-            if(nonContainedReference){
+            if(nonContainedReference && recursive){
                 var elemPath = internalElem.path()!!
                 if(visitor.alreadyVisited.containsKey(elemPath)){return}
                 visitor.alreadyVisited.put(elemPath,internalElem)
