--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -180,8 +180,11 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         if(internalElem != null){
             if(nonContainedReference && recursive){
                 var elemPath = internalElem.path()!!
-                if(visitor.alreadyVisited.containsKey(elemPath)){return}
-                visitor.alreadyVisited.put(elemPath,internalElem)
+                if(visitor.alreadyVisited != null && visitor.alreadyVisited!!.containsKey(elemPath)){return}
+                if(visitor.alreadyVisited == null){
+                    visitor.alreadyVisited = java.util.HashMap<String,org.kevoree.modeling.api.KMFContainer>()
+                }
+                visitor.alreadyVisited!!.put(elemPath,internalElem)
             }
             visitor.visit(internalElem,refName,this)
             if(!visitor.visitStopped){
