--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -4,6 +4,6 @@ package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.contain
 
 class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : Int, val refName : String, val element : Any?) {
     fun run() {
-        target.reflexiveMutator(mutatorType,refName, element)
+        target.reflexiveMutator(mutatorType,refName, element,true,true)
     }
 }
