--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -364,7 +364,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
             val refVisitor = object : org.kevoree.modeling.api.util.ModelVisitor() {
                 public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
                     val concatedKey = refNameInParent+"_"+elem.path()
-                    if(values.get(concatedKey) == concatedKey){
+                    if(values.get(concatedKey) != null){
                         if(isInter){
                             traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path()!!,refNameInParent,elem.path()!!,null))
                         }
