--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -6,6 +6,13 @@
 
 package ${packElem}
 
+
+object cleanCacheVisitor : org.kevoree.modeling.api.util.ModelVisitor() {
+    public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
+          (elem as KMFContainerImpl).path_cache = null
+    }
+}
+
 trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 
     internal open var internal_eContainer : org.kevoree.modeling.api.${formatedFactoryName}?
@@ -56,11 +63,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     fun internalGetKey() : String?
 
     fun setEContainer( container : org.kevoree.modeling.api.${formatedFactoryName}?, unsetCmd : RemoveFromContainerCommand?, refNameInParent : String? ) {
-
-        path_cache = null
-
         if(internal_readOnlyElem){return}
-
         val tempUnsetCmd = internal_unsetCmd
         internal_unsetCmd = null
         if(tempUnsetCmd != null){
@@ -68,10 +71,10 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         }
         internal_eContainer = container
         internal_unsetCmd = unsetCmd
-
         internal_containmentRefName = refNameInParent
-
-    }
+        path_cache = null
+        visit(cleanCacheVisitor,true,true,false)
+}
 
 #if($ctx.genSelector)
 
