--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -292,6 +292,9 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 
     override fun findByPath(query: String): org.kevoree.modeling.api.KMFContainer? {
         val firstSepIndex = query.indexOf('[')
+        if(firstSepIndex == -1){
+             if(query.isEmpty()){return this}else{return null}
+        }
         var queryID = ""
         var extraReadChar = 2
         val relationName = query.substring(0, query.indexOf('['))
