Initialize resourceSet / Cleanup ModelEvent / Initiate Model trace inverter / Add feature ModelTracker :-)

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/DefaultTraceSequence.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/DefaultTraceSequence.vm
@@ -13,6 +13,6 @@ import org.kevoree.modeling.api.trace.*
  */
 
 class DefaultTraceSequence() : org.kevoree.modeling.api.trace.TraceSequence {
-override var traces : java.util.ArrayList<org.kevoree.modeling.api.trace.ModelTrace> = java.util.ArrayList<org.kevoree.modeling.api.trace.ModelTrace>()
+override var traces : MutableList<org.kevoree.modeling.api.trace.ModelTrace> = java.util.ArrayList<org.kevoree.modeling.api.trace.ModelTrace>()
 override var factory : org.kevoree.modeling.api.KMFFactory? = ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory()
 }
