--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -2,7 +2,7 @@
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
 package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.container
 
-class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : Int, val refName : String, val element : Any?) {
+class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : org.kevoree.modeling.api.util.ActionType, val refName : String, val element : Any?) {
     fun run() {
         target.reflexiveMutator(mutatorType,refName, element,true,true)
     }
