--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
@@ -6,7 +6,7 @@
 
 package ${packageName};
 
-trait ${formatedFactoryName} : org.kevoree.modeling.api.KMFFactory {
+trait ${formatedFactoryName} : #if(!$ctx.persistence()) org.kevoree.modeling.api.KMFFactory #else org.kevoree.modeling.api.persistence.PersistenceKMFFactory #end {
 
     fun getVersion() : String
 
