--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/DefaultFactory.vm
@@ -18,6 +18,10 @@ import ${packageName}.${formatedFactoryName};
 
 override fun getVersion() : String { return "${modelVersion}" }
 
+#if($ctx.persistence())
+override val elem_cache: java.util.HashMap<String, org.kevoree.modeling.api.KMFContainer> = java.util.HashMap<String, org.kevoree.modeling.api.KMFContainer>()
+#end
+
 #foreach( $class in $classes )
 override fun create${class.getName()}() : ${class.getName()} { return ${class.getName()}Impl() }
 #end
