--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
@@ -11,14 +11,31 @@ trait ${formatedFactoryName}PersistenceImpl : ${formatedFactoryName}Impl,org.kev
 
     fun checkLazyLoad(){
         if(!isResolved){
-            val content = originFactory!!.getTraces(path()!!)
-            content?.applyOn(this)
             isResolved = true
+            val content = originFactory!!.getTraces(path()!!)
+            content?.silentlyApplyOn(this)
         }
     }
 
-    override fun setOriginPath(path: String){
+    override fun setOriginPath(path: String) {
         path_cache = path
+        if(path.isNotEmpty() && path != "/"){
+
+            //set key_cache
+            key_cache = path.substring(path.lastIndexOf("[")+1,path.lastIndexOf("]"))
+
+            var parentPath: String = "/"
+            var currentParentRelationName = ""
+            if(path.contains("/")){
+                parentPath = path.substring(0, path.lastIndexOf("/"))
+                currentParentRelationName = path.substring(path.lastIndexOf("/") + 1, path.size - 1)
+                currentParentRelationName = currentParentRelationName.substring(0, currentParentRelationName.lastIndexOf("["))
+            }
+            val parentElem = originFactory!!.lookup(parentPath)!!
+            (this as ${packElem}.KMFContainerPersistenceImpl).setEContainer(parentElem,${packElem}.RemoveFromContainerCommand(parentElem, org.kevoree.modeling.api.util.ActionType.REMOVE, currentParentRelationName, this), currentParentRelationName)
+        }
+        path_cache = path
+
     }
 
 }
