--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -64,6 +64,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 
     fun setEContainer( container : org.kevoree.modeling.api.${formatedFactoryName}?, unsetCmd : RemoveFromContainerCommand?, refNameInParent : String? ) {
         if(internal_readOnlyElem){return}
+        if(eContainer() == container){return}
         val tempUnsetCmd = internal_unsetCmd
         internal_unsetCmd = null
         if(tempUnsetCmd != null){
@@ -200,6 +201,7 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
     }
 
     var path_cache : String?
+    var key_cache : String?
 
     override fun path(): String? {
         if(path_cache!=null){return path_cache}
@@ -291,6 +293,9 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
 #end
 
     override fun findByPath(query: String): org.kevoree.modeling.api.KMFContainer? {
+        if(query == path()){
+            return this
+        }
         val firstSepIndex = query.indexOf('[')
         if(firstSepIndex == -1){
              if(query.isEmpty()){return this}else{return null}
@@ -387,5 +392,25 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
         return traces
     }
 
+        override fun toTraces(attributes : Boolean, references : Boolean) : List<org.kevoree.modeling.api.trace.ModelTrace> {
+        val traces = java.util.ArrayList<org.kevoree.modeling.api.trace.ModelTrace>()
+        if(attributes){
+            val attVisitorFill = object : org.kevoree.modeling.api.util.ModelAttributeVisitor {
+                public override fun visit(value: Any?, name: String, parent: org.kevoree.modeling.api.KMFContainer){
+                    traces.add(org.kevoree.modeling.api.trace.ModelSetTrace(path()!!,name,null,org.kevoree.modeling.api.util.AttConverter.convFlatAtt(value),null))
+                }
+            }
+            this.visitAttributes(attVisitorFill)
+        }
+        if(references){
+            val refVisitorFill = object : org.kevoree.modeling.api.util.ModelVisitor() {
+                public override fun visit(elem: org.kevoree.modeling.api.KMFContainer, refNameInParent: String, parent: org.kevoree.modeling.api.KMFContainer) {
+                    traces.add(org.kevoree.modeling.api.trace.ModelAddTrace(path()!!,refNameInParent,elem.path()!!,null))
+                }
+            }
+            this.visit(refVisitorFill,false,true,true)
+        }
+        return traces
+    }
 
 }
