first working version  of the persistence layer

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -318,6 +318,11 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
             subquery = subquery.substring(subquery.indexOf('/') + 1, subquery.size)
         }
         val objFound = findByID(relationName,queryID)
+#if($ctx.persistence())
+        if(objFound==null){
+            return (this as org.kevoree.modeling.api.persistence.KMFContainerProxy).originFactory!!.lookup(query)
+        }
+#end
         if(subquery != "" && objFound != null){
              return objFound.findByPath(subquery)
         } else {
