--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerPersistenceTrait.vm
@@ -12,8 +12,13 @@ trait ${formatedFactoryName}PersistenceImpl : ${formatedFactoryName}Impl,org.kev
     fun checkLazyLoad(){
         if(!isResolved){
             isResolved = true
+            inResolution = true
             val content = originFactory!!.getTraces(path()!!)
+            val previousParent = internal_eContainer
+            internal_eContainer = null
             content?.silentlyApplyOn(this)
+            internal_eContainer = previousParent
+            inResolution = false
         }
     }
 
@@ -32,7 +37,10 @@ trait ${formatedFactoryName}PersistenceImpl : ${formatedFactoryName}Impl,org.kev
                 currentParentRelationName = currentParentRelationName.substring(0, currentParentRelationName.lastIndexOf("["))
             }
             val parentElem = originFactory!!.lookup(parentPath)!!
-            (this as ${packElem}.KMFContainerPersistenceImpl).setEContainer(parentElem,${packElem}.RemoveFromContainerCommand(parentElem, org.kevoree.modeling.api.util.ActionType.REMOVE, currentParentRelationName, this), currentParentRelationName)
+            internal_unsetCmd = org.cloud.container.RemoveFromContainerCommand(parentElem, org.kevoree.modeling.api.util.ActionType.REMOVE, currentParentRelationName, this)
+            internal_eContainer = parentElem
+            internal_containmentRefName = currentParentRelationName
+
         }
         path_cache = path
 
