--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -192,10 +192,11 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
             }
             visitor.visit(internalElem,refName,this)
             if(!visitor.visitStopped){
-                if(recursive && visitor.visitChildren){
-                    internalElem.visit(visitor,recursive,containedReference,nonContainedReference)
+                if(recursive && (visitor.visitChildren || visitor.visitReferences)){
+                    internalElem.visit(visitor,recursive,visitor.visitChildren,visitor.visitReferences)
                 }
                 visitor.visitChildren = true
+                visitor.visitReferences = true
             }
         }
     }
