--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -193,7 +193,9 @@ trait ${formatedFactoryName}Impl : org.kevoree.modeling.api.KMFContainer {
             visitor.visit(internalElem,refName,this)
             if(!visitor.visitStopped){
                 if(recursive && (visitor.visitChildren || visitor.visitReferences)){
-                    internalElem.visit(visitor,recursive,visitor.visitChildren,visitor.visitReferences)
+                    val visitSubReferences = nonContainedReference && visitor.visitReferences
+                    val visitSubChilds = containedReference && visitor.visitChildren
+                    internalElem.visit(visitor,recursive,visitSubChilds,visitSubReferences)
                 }
                 visitor.visitChildren = true
                 visitor.visitReferences = true
