--- a/org.kevoree.modeling.cpp.generator/src/main/resources/templates/remove_method.vm
+++ b/org.kevoree.modeling.cpp.generator/src/main/resources/templates/remove_method.vm
@@ -4,7 +4,7 @@
 
 void ${classname}::remove${refname}(${typeadd} *ptr)
 {
-    PRINTF("BEGIN -- ${classname} remove${refname}");
+    //PRINTF("BEGIN -- ${classname} remove${refname}");
     ${typeadd} *container = (${typeadd}*)ptr;
     if(container->internalGetKey().empty())
     {
@@ -13,12 +13,12 @@ void ${classname}::remove${refname}(${typeadd} *ptr)
     else
     {
         PRINTF("KEY -- ${classname} ${refname}  "<< container->internalGetKey() );
-        ${refname}.set_deleted_key(container->internalGetKey());
+       // ${refname}.set_deleted_key(container->internalGetKey());
         ${refname}.erase( ${refname}.find(container->internalGetKey()));
-        ${refname}.clear_deleted_key();
+     //   ${refname}.clear_deleted_key();
         ${isContainment}
         container->setEContainer(NULL,NULL,"");
     }
-    PRINTF("END -- ${classname} remove${refname}");
+   // PRINTF("END -- ${classname} remove${refname}");
 }
 
